<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:background="@android:color/transparent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/ll_social_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_corner"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/sign_in_to"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="50"
                android:background="@color/colorFacebook"
                android:drawableLeft="@mipmap/ic_facebook"
                android:drawablePadding="5dp"
                android:drawableStart="@mipmap/ic_facebook"
                android:padding="5dp"
                android:text="@string/facebook"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_google_more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="50"
                android:background="@color/colorGoogleMore"
                android:drawableLeft="@mipmap/ic_google_more"
                android:drawablePadding="5dp"
                android:drawableStart="@mipmap/ic_google_more"
                android:padding="5dp"
                android:text="@string/google_more"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_social_network"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_corner"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/registration"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:textAllCaps="true" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:drawableLeft="@mipmap/ic_man_sign"
                android:drawablePadding="5dp"
                android:drawableStart="@mipmap/ic_man_sign"
                android:text="@string/man"
                android:textAllCaps="true" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/rb_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:drawableLeft="@mipmap/ic_woman_sign"
                android:drawablePadding="5dp"
                android:drawableStart="@mipmap/ic_woman_sign"
                android:text="@string/woman"
                android:textAllCaps="true" />
        </RadioGroup>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_birth_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/birth_date" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="textEmailAddress" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmation"
            android:inputType="textPassword" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_button"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>