<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_dialog_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:visibility="gone" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/dialog_hint_write_text"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_dialog_valid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_dialog_button"
            android:padding="20dp"
            android:text="@string/dialog_valid"
            android:textAllCaps="true"
            android:textColor="@drawable/background_dialog_text" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/tv_dialog_valid"
            android:layout_toStartOf="@+id/tv_dialog_valid"
            android:background="@drawable/background_dialog_button"
            android:padding="20dp"
            android:text="@string/dialog_cancel"
            android:textAllCaps="true"
            android:textColor="@drawable/background_dialog_text" />


    </RelativeLayout>

</LinearLayout>