<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_global"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:textAllCaps="true"
        android:text="@string/complete_account_title"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <com.hugobrisson.teammatetest.common.custom.TMNoSwipeableViewPager
        android:id="@+id/vp_global"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_step"
        android:layout_below="@id/tv_register_title" />

    <LinearLayout
        android:id="@+id/ll_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/white" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/register_back"
                android:textAllCaps="true"
                android:textColor="@drawable/background_white_action"
                android:textSize="16sp"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/ll_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="@string/register_next"
                android:textAllCaps="true"
                android:textColor="@drawable/background_white_action"
                android:textSize="16sp" />


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>