<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cv_avis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/background_item"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatRatingBar
                    android:id="@+id/rating_bar"
                    style="?attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="0" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="36"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/see_comments"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_maters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="50"
                android:background="@drawable/background_item">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/background_item"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.hugobrisson.teammate.common.custom.TMImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/background_circle"
                        android:padding="10dp"
                        android:src="@mipmap/ic_home_white_24dp"
                        app:colorBackground="@color/colorChat" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_maters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="36"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/teammaters"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_activities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="50"
                android:background="@drawable/background_item">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/background_item"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.hugobrisson.teammate.common.custom.TMImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/background_circle"
                        android:padding="10dp"
                        android:src="@mipmap/ic_home_white_24dp"
                        app:colorBackground="@color/colorActivity" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_activities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="36"
                        android:textColor="@android:color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/activity"
                        android:textAllCaps="true"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_next_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/background_item">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/background_item"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/next_activity"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_next_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="20 Juin à 15h"
                    android:textSize="25sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/see_activity"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>